# dwave-scikit-learn-plugin

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
dwave/plugins/: __init__.py
dwave/plugins/sklearn/: __init__.py  _conditional_mutual_info.py  nearest_neighbors.pyx  transformers.py  utilities.py
releasenotes/notes/: SelectFromQuadraticModel-b051274f784d6fbf.yaml  Update-the-transformers.py-file-to-work-with-the-NL-solver-0cf03a2e1b7a33d6.yaml  Updated-README-to-NL-e02d2ae2ae9d6705.yaml  algorithm-update-d73cd4f7c854a8b3.yaml  correlation-8eaf77b85eeed9ba.yaml  fixed-column-f05e10ff94adfaef.yaml  initial-40d81acd45b0cca8.yaml  mutual-info-ddd1a23e320f88ae.yaml  problem-submission-label-68c3670bd04b5c25.yaml  test_transformer.py-7793a6957af9735a.yaml
tests/: local_test_transformer.py  requirements.txt  test_mutual_info.py  test_package.py  test_transformer.py  test_utilities.py
