[metadata]
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
license = Apache 2.0
long_description = file: README.md
name = dwave-scikit-learn-plugin
project_urls =
    Changes = https://github.com/dwavesystems/dwave-scikit-learn-plugin/releases
    Documentation = https://docs.ocean.dwavesys.com
    Source Code = https://github.com/dwavesystems/dwave-scikit-learn-plugin
url = https://github.com/dwavesystems/dwave-scikit-learn-plugin
version = attr: dwave.plugins.sklearn.__version__

author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = A plugin to scikit-learn for quantum hybrid solving

[options]
install_requires =
    dimod>=0.12.3
    dwave-system>=1.18.0
    scikit-learn>=1.0.2 
    pandas>=1.3.5
packages = 
    dwave
    dwave.plugins
    dwave.plugins.sklearn
python_requires = >=3.7

[pycodestyle]
max-line-length = 100
