[metadata]
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
license = Apache 2.0
long_description = file: README.md
long_description_content_type = text/markdown
name = dwave-scikit-learn-plugin
project_urls =
    Changes = https://github.com/dwavesystems/dwave-scikit-learn-plugin/releases
    Documentation = https://docs.ocean.dwavesys.com
    Source Code = https://github.com/dwavesystems/dwave-scikit-learn-plugin
url = https://github.com/dwavesystems/dwave-scikit-learn-plugin
version = attr: dwave.plugins.sklearn.__version__

author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
description = A plugin to scikit-learn for quantum hybrid solving

[options]
install_requires =
    dwave-optimization>=0.6.0
    dwave-system>=1.18.0
    numpy>=1.20.0
    scikit-learn>=1.0.2 
packages = 
    dwave
    dwave.plugins
    dwave.plugins.sklearn
python_requires = >=3.7

[pycodestyle]
max-line-length = 100
